--- a/pkg/cmd/dev/BUILD.bazel
+++ b/pkg/cmd/dev/BUILD.bazel
@@ -18,6 +18,7 @@ go_library(
         "lint.go",
         "main.go",
         "merge_test_xmls.go",
+        "roachprod_bench.go",
         "roachprod_stress.go",
         "test.go",
         "testlogic.go",
