--- a/pkg/BUILD.bazel
+++ b/pkg/BUILD.bazel
@@ -966,6 +966,8 @@ GO_TARGETS = [
     "//pkg/cmd/release:release_test",
     "//pkg/cmd/returncheck:returncheck",
     "//pkg/cmd/returncheck:returncheck_lib",
+    "//pkg/cmd/roachprod-bench:roachprod-bench",
+    "//pkg/cmd/roachprod-bench:roachprod-bench_lib",
     "//pkg/cmd/roachprod-stress:roachprod-stress",
     "//pkg/cmd/roachprod-stress:roachprod-stress_lib",
     "//pkg/cmd/roachprod:roachprod",
@@ -2366,6 +2368,7 @@ GET_X_DATA_TARGETS = [
     "//pkg/cmd/release:get_x_data",
     "//pkg/cmd/returncheck:get_x_data",
     "//pkg/cmd/roachprod:get_x_data",
+    "//pkg/cmd/roachprod-bench:get_x_data",
     "//pkg/cmd/roachprod-stress:get_x_data",
     "//pkg/cmd/roachtest:get_x_data",
     "//pkg/cmd/roachtest/cluster:get_x_data",
