--- a/pkg/cmd/roachprod-bench/BUILD.bazel
+++ b/pkg/cmd/roachprod-bench/BUILD.bazel
@@ -8,18 +8,22 @@ go_library(
         "compare.go",
         "main.go",
         "metadata.go",
-        "remote.go",
         "report.go",
+        "storage.go",
     ],
     importpath = "github.com/cockroachdb/cockroach/pkg/cmd/roachprod-bench",
     visibility = ["//visibility:private"],
     deps = [
+        "//pkg/cmd/roachprod-bench/cluster",
+        "//pkg/cmd/roachprod-bench/google",
         "//pkg/roachprod",
         "//pkg/roachprod/logger",
         "//pkg/roachprod/ssh",
         "//pkg/util/timeutil",
         "@com_github_cockroachdb_errors//:errors",
         "@com_github_cockroachdb_errors//oserror",
+        "@org_golang_x_perf//benchstat",
+        "@org_golang_x_perf//storage/benchfmt",
     ],
 )
 
